# ModelMetricUncertainty

./: .clang-tidy  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION  CMakeLists.txt  MANIFEST.in  NOTICE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: asan.yml  build.yml  linux.yml  macos.yml  valgrind.yml  wheels.yml  windows.yml
cmake/: BuildType.cmake  MMU_ReleaseFlags.cmake  MMU_headers.cmake  OptimizeForArchitecture.cmake  SimpleOptimizeForArchitecture.cmake
cpp/: CMakeLists.txt
cpp/bindings/: bindings.cpp  confusion_matrix.cpp  confusion_matrix.hpp  metrics.cpp  metrics.hpp
cpp/include/mmu/: confusion_matrix.hpp  metrics.hpp  numpy.hpp  utils.hpp
docs/: requirements.txt
docs/source/: basics.rst  conf.py  contents.rst  contributing.rst  estimators.rst  extconfig.rst  extension.rst  index.rst  installation.rst  introduction.rst  metrics.rst  pr.rst  roc.rst  usage.rst
include/mmu/api/: bvn_error.hpp  bvn_grid.hpp  common.hpp  confusion_matrix.hpp  error_prop.hpp  lep_mvn.hpp  metrics.hpp  multn_loglike.hpp  mvn_error.hpp  mvn_grid.hpp  numpy.hpp  pr_bvn_grid.hpp  pr_dirich_multn.hpp  pr_multn_loglike.hpp  roc_bvn_grid.hpp  roc_multn_loglike.hpp  utils.hpp
include/mmu/bindings/: bvn_error.hpp  bvn_grid.hpp  confusion_matrix.hpp  lep_mvn.hpp  metrics.hpp  multn_loglike.hpp  mvn_error.hpp  mvn_grid.hpp  pr_bvn_grid.hpp  pr_dirich_multn.hpp  pr_multn_loglike.hpp  roc_bvn_grid.hpp  roc_multn_loglike.hpp  utils.hpp
include/mmu/core/: bvn_error.hpp  bvn_grid.hpp  common.hpp  confusion_matrix.hpp  distributions.hpp  erfinv.hpp  error_prop.hpp  grid_bounds.hpp  metrics.hpp  multinomial.hpp  multn_loglike.hpp  mvn_error.hpp  mvn_grid.hpp  pr_bvn_grid.hpp  pr_dirich_multn.hpp  pr_grid.hpp  pr_multn_loglike.hpp  random.hpp  roc_bvn_grid.hpp  roc_multn_loglike.hpp
include/mmu/tests/: math.hpp  numpy.hpp
mmu/: __init__.py  bindings.cpp  simulation.py
mmu/commons/: __init__.py  checks.py  numpy.hpp  types.py  utils.hpp  utils.py
mmu/commons/_testing/: __init__.py  utils.py
mmu/core/: CMakeLists.txt
mmu/core/bindings/: CMakeLists.txt  bindings.cpp  confusion_matrix.cpp  confusion_matrix.hpp  metrics.cpp  metrics.hpp  utils.cpp  utils.hpp
mmu/core/include/mmu/: common.hpp  confusion_matrix.hpp  erfinv.hpp  error_prop.hpp  metrics.hpp  numpy.hpp  utils.hpp
mmu/core/tests/: CMakeLists.txt  bindings.cpp  math_bindings.hpp  numpy_bindings.hpp  utils_bindings.hpp
mmu/lib/: __init__.py
mmu/methods/: __init__.py  curvebase.py  pointbase.py  pr_mvn.py  prcurve.py  prmethods.py  prpoint.py  roccurve.py  rocpoint.py
mmu/metrics/: __init__.py  confmat.py  confusion_matrix.hpp  metrics.hpp  metrics.py  pr_lep.py  utils.py
mmu/models/: __init__.py  base.py  beta_binomial.py  dirichlet_multinomial.py
mmu/stan/: __init__.py  beta_binomial.stan  dirichlet_multinomial.stan  dirichlet_multinomial_multi.stan
mmu/stats/: __init__.py  stats.py
mmu/viz/: __init__.py  contours.py  ellipse.py  utils.py
notebooks/: ROC_uncertainty_tutorial.ipynb  metrics_tutorial.ipynb  precision_recall_uncertainty_tutorial.ipynb  walkthrough_mmu.ipynb
src/api/: bvn_error.cpp  bvn_grid.cpp  metrics.cpp  multn_loglike.cpp  mvn_error.cpp  mvn_grid.cpp  pr_bvn_grid.cpp  pr_dirich_multn.cpp  pr_multn_loglike.cpp  roc_bvn_grid.cpp  roc_multn_loglike.cpp
src/bindings/: CMakeLists.txt  bindings.cpp  bvn_error.cpp  bvn_grid.cpp  confusion_matrix.cpp  lep_mvn.cpp  metrics.cpp  multn_loglike.cpp  mvn_error.cpp  mvn_grid.cpp  pr_bvn_grid.cpp  pr_dirich_multn.cpp  pr_multn_loglike.cpp  roc_bvn_grid.cpp  roc_multn_loglike.cpp  utils.cpp
src/tests/: CMakeLists.txt  bindings.cpp  math.cpp  numpy.cpp
tests/: CMakeLists.txt  mmu_test_utils.py  pyproject.toml  setup.py  test_confusion_matrix.py
tests/api/: pr_multn_chi2_scores.npy  roc_multn_chi2_scores.npy  test_confusion_matrix.py  test_metrics.py  test_prcurve.py  test_prpoint.py  train_reference_sets.npz
tests/cpp/: bindings.cpp  numpy_bindings.hpp  utils_bindings.hpp
tests/internal/: test_math_func.py  test_numpy_hpp.py  test_utils_hpp.py
tests/mmu_tests/: __init__.py  test_confusion_matrix.py  test_metrics.py  test_numpy_hpp.py  test_utils_hpp.py  utils.py
tests/mmu_tests/lib/: __init__.py
