[metadata]
name = mmu
description = Compute uncertainties on classification models.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ralph Urlus
author_email = rurlus.dev@gmail.com
license = Apache-2
platforms = any
url = https://github.com/RUrlus/ModelMetricUncertainty
project_urls =
    Source  = https://github.com/RUrlus/ModelMetricUncertainty
    Tracker = https://github.com/RUrlus/ModelMetricUncertainty/issues
keywords = uncertainty classification
classifiers =

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    # This requirement is only necessary if the build_extension_env
    # context manager is used in the top-level __init__.py
    cmake-build-extension
    scipy>=1.5.2
    numpy>=1.18.0
    pandas>=0.25.1
    matplotlib>=2.2.3

[options.extras_require]
test =
    pytest
all =
    %(test)s

[tool:pytest]
addopts = -rsxX -v
testpaths = tests
