[metadata]
name = mmu
description = Compute uncertainties on classification models.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ralph Urlus
author_email = rurlus.dev@gmail.com
license = Apache-2
platforms = any
url = https://github.com/RUrlus/ModelMetricUncertainty
project_urls =
    Source  = https://github.com/RUrlus/ModelMetricUncertainty
    Tracker = https://github.com/RUrlus/ModelMetricUncertainty/issues
keywords = uncertainty classification metrics
classifiers =

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.18
    scipy>=1.5.2
    pandas>=0.25.1
    matplotlib>=2.2.3
    scikit-learn>=1.0

[options.extras_require]
test =
    pytest
all =
    %(test)s

[tool:pytest]
addopts = -rsxX -v
testpaths = tests
