CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

# Define CMAKE_INSTALL_xxx: LIBDIR, INCLUDEDIR
include(GNUInstallDirs)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/bindings)

IF (DEFINED ENV{MMU_BUILD_TESTS} OR DEFINED MMU_BUILD_TESTS)
    MESSAGE(STATUS "MMU: Building tests")
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/tests)
ENDIF()

# Quiet a warning, since this project is only valid with SKBUILD
SET(ignoreMe "${SKBUILD}")
